--- a/voile-storage-app/netlify.toml
+++ b/voile-storage-app/netlify.toml
@@ -1,4 +1,6 @@
-[[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+[build]
+  command = "npm run build"
+  publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
