--- a/voile-storage-app/netlify.toml
+++ b/voile-storage-app/netlify.toml
@@ -1,6 +1,9 @@
 [build]
   command = "npm run build"
-  publish = ".next"
+  publish = "voile-storage-app/out"    # Changez ça de .next à out
+  base = "voile-storage-app"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
